fix image alignment

--- a/resources/js/components/models/item-list/item/item.scss
+++ b/resources/js/components/models/item-list/item/item.scss
@@ -59,6 +59,7 @@
 		border-radius: 8px;
 		grid-column: 2/2;
 		grid-row: 2/6;
+		justify-self: self-end;
 	}
 }
 
